--- a/TiendaLocal-LuciaAndreu/style/styleIndex.css
+++ b/TiendaLocal-LuciaAndreu/style/styleIndex.css
@@ -10,7 +10,7 @@ header {
     background-color: #ffb6c1;
     color: white;
     text-align: center;
-    padding: 20px 0;
+    padding: 20px;
 }
 
 header img {
