--- a/Wireframe_LuciaAndreu/styles/styleMenu.css
+++ b/Wireframe_LuciaAndreu/styles/styleMenu.css
@@ -1,18 +1,35 @@
+.bg-pink {
+  background-color: #f5b8c4;
+}
+
+.text-pink {
+  color: #d16d8a;
+}
+
+.bg-yellow {
+  background-color: #fff2b2;
+}
+
+button:hover {
+  background-color: #ffe180;
+  transition: 0.2s;
+}
+
 .carousel-item {
-  height: 300px;
+  height: 280px;
   background-size: cover;
   background-position: center;
 }
 
 table {
-  background-color: #fff;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  background-color: white;
+  border-radius: 10px;
 }
 
-th {
-  color: #fff;
-  background-color: #0d6efd !important;
+th, td {
+  text-align: center;
 }
+
 
 footer a:hover {
   text-decoration: underline;
